# Anime-Tui

./: .gitignore  PKGBUILD  README.md  anime-tui-git-1.0.0.r3.g765ed20-1-any.pkg.tar.zst  fix_indent.py  fix_indent2.py  fix_yummy.py  inject_ui.py  install.bat  install.ps1  install.sh  patch.py  pyproject.toml  requirements.txt  test_anidub.py  test_anilibria_mirror.py  test_anitube.py  test_anitube2.py  test_empty_search.py  test_jutsu.py  test_kodik.py  test_vost.py  uninstall.sh
anime-tui/: FETCH_HEAD  config  packed-refs
anime-tui/objects/pack/: pack-d5f578e243f4fe701ac7cce367b02566fa14e444.idx  pack-d5f578e243f4fe701ac7cce367b02566fa14e444.pack  pack-d5f578e243f4fe701ac7cce367b02566fa14e444.rev
anime_tui/: bg_downloader.py  config.py  downloader.py  favorites.py  history.py  i18n.py  main.py  models.py  player.py  preview.py  proxy.py  search_cli.py  status_ui.py  theme.py  ui.py
anime_tui/providers/: anilibria.py  animevost.py  base.py  rezka.py  yummyanime.py
pkg/anime-tui-git/: .BUILDINFO  .MTREE  .PKGINFO
pkg/anime-tui-git/usr/share/doc/anime-tui/: README.md
